Fixed links and email form

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 					<div class="hero-buttons d-flex justify-content-center mt-5 mb-5">
 						<div class="btn">
 							<div class="btn-inner">
-								<a href="#" class="btn-link"><img src="./img/Icone Instagram.png" alt="Ícone Instagram" /> Instagram</a>
+								<a href="https://www.instagram.com/insertdt/" class="btn-link" target="_blank"><img src="./img/Icone Instagram.png" alt="Ícone Instagram" /> Instagram</a>
 							</div>
 						</div>
 						<div class="btn">
 							<div class="btn-inner">
-								<a href="#" class="btn-link"><img src="./img/Icone Facebook.png" alt="Ícone Instagram" /> Facebook</a>
+								<a href="https://www.facebook.com/insertdt/" class="btn-link" target="_blank"><img src="./img/Icone Facebook.png" alt="Ícone Instagram" /> Facebook</a>
 							</div>
 						</div>
 					</div>
@@ -100,21 +100,23 @@
 			<section id="contato" class="contact-section container-fluid">
 				<h1 class="contact-title">Contato</h1>
 				<p class="contact-text">Quer um site como esse? Entre em contato e faça já o seu orçamento!</p>
-				<form class="container-fluid">
+				<form action="https://formsubmit.co/ff7a2b9f921208303a2736a1453b0189" method="POST" class="container-fluid">
+					<input type="hidden" name="_subject" value="[Mensagem] Fomulário Site Insert" />
+					<input type="hidden" name="_template" value="table" />
 					<div class="row">
 						<div class="col-12 col-lg-4 offset-lg-2 mb-3">
 							<label for="name" class="form-label">Nome:</label>
-							<input type="text" class="form-control" id="name" placeholder="Seu Nome" required />
+							<input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" required />
 						</div>
 						<div class="col-12 col-lg-4 mb-3">
 							<label for="email" class="form-label">Email</label>
-							<input type="email" class="form-control" id="email" placeholder="Seu Email" required />
+							<input type="email" name="email" class="form-control" id="email" placeholder="Seu Email" required />
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-12 col-lg-8 offset-lg-2 mb-3">
 							<label for="msg" class="form-label">Como podemos ajudar?</label>
-							<textarea rows="5" class="form-control" id="msg" placeholder="Sua Mensagem" autocomplete="none" required></textarea>
+							<textarea rows="5" name="message" class="form-control" id="msg" placeholder="Sua Mensagem" autocomplete="none" required></textarea>
 						</div>
 					</div>
 					<div class="row d-flex">
@@ -130,7 +132,7 @@
 				<p class="contact-wpp-text">Ou, caso prefira, nos envie uma mensagem via whatsapp!</p>
 				<div class="btn btn-pill">
 					<div class="btn-inner d-flex justify-content-center">
-						<a href="#" class="btn-link"><img src="./img/svg/Whatsapp SVG.svg" width="32" height="32" alt="ìcone Instagram" /> Instagram</a>
+						<a href="https://wa.me/5531998101999" class="btn-link" target="_blank"><img src="./img/svg/Whatsapp SVG.svg" width="32" height="32" alt="Ícone Whatsapp" /> Instagram</a>
 					</div>
 				</div>
 			</section>
@@ -143,8 +145,8 @@
 					<p class="copyright-text">© Copyright Insert 2021</p>
 				</div>
 				<div class="col-12 col-md-2 d-flex footer-socials">
-					<a href="#"><img src="./img/Icone Instagram.png" alt="Instagram" /></a>
-					<a href="#"><img src="./img/Icone Facebook.png" alt="Facebook" /></a>
+					<a href="https://www.instagram.com/insertdt/" target="_blank"><img src="./img/Icone Instagram.png" alt="Instagram" /></a>
+					<a href="https://www.facebook.com/insertdt/" target="_blank"><img src="./img/Icone Facebook.png" alt="Facebook" /></a>
 				</div>
 			</div>
 		</footer>
