Fixed Whatsapp Button Typo

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<p class="contact-wpp-text">Ou, caso prefira, nos envie uma mensagem via whatsapp!</p>
 				<div class="btn btn-pill">
 					<div class="btn-inner d-flex justify-content-center">
-						<a href="https://wa.me/5531998101999" class="btn-link" target="_blank"><img src="./img/svg/Whatsapp SVG.svg" width="32" height="32" alt="Ícone Whatsapp" /> Instagram</a>
+						<a href="https://wa.me/5531998101999" class="btn-link" target="_blank"><img src="./img/svg/Whatsapp SVG.svg" width="32" height="32" alt="Ícone Whatsapp" /> Whatsapp</a>
 					</div>
 				</div>
 			</section>
